gcc/testsuite/rust/rustc/ui/consts/const-eval/index_out_of_bounds_propagated.rs
// build-fail

fn main() {
    let array = [std::env::args().len()];
    array[1]; // { dg-error "" "" { target *-*-* } }
}

